# trust-dns

./: Cargo.toml  README.md
crates/client/src/: lib.rs  tests.rs
crates/proto/: Cargo.toml
crates/proto/src/: error.rs  lib.rs
crates/proto/src/dnssec/: signer.rs
crates/proto/src/dnssec/rdata/: dnskey.rs  ds.rs
crates/proto/src/h2/: h2_client_stream.rs  h2_server.rs
crates/proto/src/h3/: h3_client_stream.rs
crates/proto/src/https/: https_client_stream.rs  https_server.rs  request.rs
crates/proto/src/multicast/: mdns_client_stream.rs  mdns_stream.rs
crates/proto/src/native_tls/: tests.rs  tls_client_stream.rs  tls_stream.rs
crates/proto/src/op/: edns.rs  header.rs  lower_query.rs  message.rs  op_code.rs  query.rs  response_code.rs  update_message.rs
crates/proto/src/openssl/: tls_client_stream.rs  tls_stream.rs
crates/proto/src/rr/: dns_class.rs  lower_name.rs  mod.rs  record_data.rs  record_type.rs  resource.rs  rr_key.rs  rr_set.rs  type_bit_map.rs
crates/proto/src/rr/dnssec/: keypair.rs  nsec3.rs  proof.rs  public_key.rs  signer.rs  tsig.rs
crates/proto/src/rr/dnssec/rdata/: ds.rs  nsec.rs  sig.rs
crates/proto/src/rr/domain/: label.rs  mod.rs  name.rs  try_parse_ip.rs  usage.rs
crates/proto/src/rr/rdata/: a.rs  aaaa.rs  caa.rs  csync.rs  hinfo.rs  https.rs  mod.rs  mx.rs  name.rs  naptr.rs  null.rs  openpgpkey.rs  opt.rs  soa.rs  srv.rs  sshfp.rs  svcb.rs  tlsa.rs  txt.rs
crates/proto/src/rustls/: tests.rs  tls_client_stream.rs  tls_stream.rs
crates/proto/src/serialize/binary/: bin_tests.rs  decoder.rs  encoder.rs  mod.rs
crates/proto/src/serialize/txt/: errors.rs  parse_rdata.rs  zone_lex.rs
crates/proto/src/serialize/txt/rdata_parsers/: a.rs  aaaa.rs  csync.rs  naptr.rs  soa.rs  srv.rs  sshfp.rs  svcb.rs
crates/proto/src/tcp/: tcp_client_stream.rs  tcp_stream.rs
crates/proto/src/tests/: udp.rs
crates/proto/src/udp/: udp_client_stream.rs  udp_stream.rs
crates/proto/src/xfer/: dns_exchange.rs  dns_handle.rs  dns_multiplexer.rs  dns_request.rs  dns_response.rs  dnssec_dns_handle.rs  mod.rs  retry_dns_handle.rs  serial_message.rs
crates/proto/src/xfer/dnssec_dns_handle/: mod.rs
