[package]
name = "trust-dns-proto"
version = "0.22.0"
edition = "2021"
rust-version = "1.64.0"
authors = ["Benjamin Fry <benjaminfry@me.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
Trust-DNS is a safe and secure DNS library. This is the foundational DNS protocol library for all Trust-DNS projects.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/trust-dns-proto"
homepage = "https://trust-dns.org/"
repository = "https://github.com/bluejekyll/trust-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]
categories = ["network-programming"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

[badges]
#github-actions = { repository = "bluejekyll/trust-dns", branch = "main", workflow = "test" }
codecov = { repository = "bluejekyll/trust-dns", branch = "main", service = "github" }
maintenance = { status = "actively-developed" }

[features]
std = [] #["futures-channel/std", "futures-io/std", "futures-util/std", "ring/std", "thiserror/std", "url/std", "ipnet/std", "rand/std"]

dns-over-tls = []
dns-over-rustls = ["dns-over-tls", "rustls", "rustls-pemfile", "tokio-rustls", "webpki", "tokio-runtime"]
dns-over-native-tls = ["dns-over-tls", "native-tls", "tokio-native-tls", "tokio-runtime"]
dns-over-openssl = ["dns-over-tls", "openssl", "tokio-openssl", "tokio-runtime"]

dns-over-https-rustls = ["dns-over-https"]
dns-over-https = ["bytes", "h2", "http", "dns-over-rustls", "webpki-roots", "tokio-runtime"]

dns-over-quic = ["quinn", "quinn-udp","rustls/quic", "dns-over-rustls", "bytes", "webpki-roots", "tokio-runtime"]

dnssec-openssl = ["dnssec", "openssl"]
dnssec-ring = ["dnssec", "ring"]
dnssec = []

testing = []

text-parsing = []
tokio-runtime = ["tokio/net", "tokio/rt", "tokio/time", "tokio/rt-multi-thread"]
default = ["tokio-runtime", "std"]

serde-config = ["serde", "url/serde"]

# enables experimental the mDNS (multicast) feature
mdns = ["socket2/all"]

# WARNING: there is a bug in the mutual tls auth code at the moment see issue #100
# mtls = ["tls"]

wasm-bindgen = ["wasm-bindgen-crate", "js-sys"]

backtrace = ["dep:backtrace"]

[lib]
name = "trust_dns_proto"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true, default-features = false }
backtrace = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
cfg-if.workspace = true
data-encoding = { workspace = true, default-features = false, features = ["alloc"] }
enum-as-inner.workspace = true
futures-channel = { version = "0.3.28", default-features = false, features = ["alloc"]  }
futures-io = { version = "0.3.28", default-features = false }
futures-util = { version = "0.3.28", default-features = false, features = ["alloc"] }
h2 = { workspace = true, features = ["stream"], optional = true }
http = { workspace = true, optional = true }
idna = { workspace = true, default-features = false, features = ["alloc"] }
ipnet = { git = "https://github.com/domenukk/ipnet.git", rev = "5828e6b", default-features = false }
js-sys = { workspace = true, optional = true }
lazy_static = { workspace = true, features = ["spin_no_std"] }
native-tls = { workspace = true, optional = true }
openssl = { workspace = true, features = ["v102", "v110"], optional = true }
quinn = { workspace = true, optional = true }
quinn-udp = {workspace = true, optional = true}
rand = { workspace = true, default-features = false, features = ["alloc", "std_rng"] }
ring = { workspace = true, optional = true, default-features = false }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
smallvec.workspace = true
socket2 = { workspace = true, optional = true }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
tinyvec = { workspace = true, features = ["alloc"] }
tracing = { version = "0.1.37", default-features = false }
tokio = { workspace = true, features = ["io-util"], optional = true }
tokio-native-tls = { workspace = true, optional = true }
tokio-openssl = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true, features = ["early-data"] }
url = { workspace = true, default-features = false, features = ["alloc", "unstable"] }
wasm-bindgen-crate = { workspace = true, optional = true, package = "wasm-bindgen" }
webpki = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
once_cell = { version = "1.17.1", default-features = false, features = ["critical-section"] }
critical-section = "1.1.1"
const-random = "0.1.15"

[dev-dependencies]
#futures-executor = { workspace = true, default-features = false, features = ["std"] }
#openssl = { workspace = true, features = ["v102", "v110"] }
#tokio = { workspace = true, features = ["rt", "time", "macros"] }
#tracing-subscriber = { workspace = true, features = ["std", "fmt", "env-filter"] }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]
